--- a/src/server/package.json
+++ b/src/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.14.0",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "properties-reader": "0.0.15"
   }
 }
