--- a/src/server/package.json
+++ b/src/server/package.json
@@ -2,6 +2,7 @@
   "name": "kanbanboard-server",
   "version": "1.0.0",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.0",
     "request": "^2.75.0",
     "properties-reader": "0.0.15"
